<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.showproduct.ShowProductFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginTop="@dimen/margin_top_for_top"
        android:hint="@string/search_barcode"
        app:endIconDrawable="@drawable/ic_qr_code_scanner"
        app:endIconMode="custom"
        app:endIconScaleType="center"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:imeOptions="actionSearch"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginTop="@dimen/margin_standard"
        android:gravity="center"
        android:text="Barcode girerek\nürün aratabilirsin."
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSearch" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEmpty">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Ürün Adı" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:columnCount="2"
            android:rowCount="2"
            app:layout_constraintBottom_toTopOf="@id/textInputLayoutAmount"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:text="@string/stock_amount"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewStockCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="@dimen/margin_standard"
                android:gravity="end"
                tools:text="15 Adet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:text="@string/one_amount_price"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="@dimen/margin_standard"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewStockCount"
                app:layout_constraintTop_toBottomOf="@id/textViewTitle"
                tools:text="150 Tl" />

        </GridLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_standard"
            android:hint="@string/amount"
            app:layout_constraintBottom_toTopOf="@id/containerTotalPrice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@string/_1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/containerTotalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_standard"
            android:background="@drawable/bg_item_view"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toTopOf="@id/buttonAddToCart">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/buttonAddToCart" />

            <TextView
                android:id="@+id/textViewTotalPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/buttonAddToCart"
                tools:text="250 TL" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_bottom_button"
            android:text="@string/add_to_cart"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>