<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.updateproduct.UpdateProductFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginTop="@dimen/margin_top_for_top"
        android:hint="Barcode"
        app:endIconDrawable="@drawable/ic_qr_code_scanner"
        app:endIconMode="custom"
        app:endIconScaleType="center"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:enabled="false"
            android:imeOptions="actionSearch"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textBrandName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginTop="@dimen/margin_top_for_top"
        android:hint="Marka Adı"
        app:layout_constraintTop_toBottomOf="@id/textInputBarcode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBrandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginTop="@dimen/margin_top_for_top"
        android:hint="@string/hint_product_name"
        app:layout_constraintTop_toBottomOf="@id/textBrandName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutStockAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginTop="@dimen/margin_top_for_top"
        android:hint="@string/hint_stock_amount"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSalePrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextStockAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:imeOptions="actionNext"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPurchasePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginTop="@dimen/margin_top_for_top"
        android:hint="@string/hint_purchase_price"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPurchasePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:imeOptions="actionNext"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSalePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginTop="@dimen/margin_top_for_top"
        android:hint="@string/hint_sale_price"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPurchasePrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSalePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:imeOptions="actionDone"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonUpdateProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/button_text_update_product"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>