<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.shoppingcart.ShoppingCartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCartItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_for_top"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/viewLine"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_cart_product" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginBottom="@dimen/margin_standard"
        android:background="@color/baseForegroundDefault"
        app:layout_constraintBottom_toTopOf="@id/containerPrice" />

    <GridLayout
        android:id="@+id/containerPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_in_container"
        android:layout_marginBottom="@dimen/margin_bottom_bottom_button"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/margin_standard"
            android:hint="@string/hint_discount_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDiscountCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonApplyDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:text="@string/apply" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="@dimen/margin_standard"
            android:background="@color/baseForegroundDefault" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="@dimen/margin_standard"
            android:background="@color/baseForegroundDefault" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_paid_price_shopping_cart"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPaidPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="11.111.111 TL" />

            <TextView
                android:id="@+id/textViewTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="11.111.111 TL" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@string/text_button_sell_shopping_cart"
            android:textAllCaps="true" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>